@@ -1,7 +1,0 @@
-#!/bin/sh
-result_file="result-1054321.tmp"
-#set -x
-@exif@ -m -o ./1054321.out.jpg @srcdir@/1054321.jpg > "$result_file" 2>&1
-s="$?"
-tail "$result_file"
-exit "$s"
