@@ -1,3 +1,0 @@
-#!/bin/sh
-set -x
-@exif@ -r -o ./1054323.out.jpg @srcdir@/1054323.jpg
