@@ -1,16 +1,0 @@
-#!/bin/sh
-
-if @exif@ "@srcdir@/images/canon-powershot-a400-001.jpg" > /dev/null 2>&1; then
-	echo "This should have failed."
-	exit 1
-fi
-
-if @exif@ --show-mnote "@srcdir@/images/canon-powershot-a400-001.jpg" > /dev/null 2>&1; then
-	echo "This should have failed."
-	exit 1
-fi
-
-@exif@ "@srcdir@/images/canon-powershot-g2-001.jpg" > /dev/null 2>&1 || exit $?
-@exif@ --show-mnote "@srcdir@/images/canon-powershot-g2-001.jpg" > /dev/null 2>&1 || exit $?
-
-exit 0
