@@ -1,0 +1,10 @@
+# Specifies autoconf variables for use by the test scripts
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+BINDIR=@bindir@
+SRCDIR=@srcdir@
+TOPSRCDIR=@top_srcdir@
+TOPBLDDIR=@top_builddir@
+EXIFEXE=`if test -x "$TOPBLDDIR/src/exif/exif/exif"; then echo "$TOPBLDDIR/src/exif/exif/exif"; elif test -x "$BINDIR/exif"; then echo "$BINDIR/exif"; else echo "Neither $TOPBLDDIR/src/exif/exif/exif nor $BINDIR/exif are executable." >&2; echo false; exit 1; fi`
+DIFFEXE=@DIFF@
