@@ -1,5 +1,6 @@
 New in 0.7.x:
-  * 
+  * Created check-vars.sh script to eliminate the need to generate all
+    the tests scripts at build time
 
 New in 0.7.13:
   * Working with libexif and exif ver. 0.6.17
